[package]
name = "rustytop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.27"}
ratatui = "0.27.0"
strum = "0.26.2"
sysinfo = "0.30.10"
tabled = "0.15.0"
users = "0.11.0"
log = "0.4.21"
itertools = "0.13.0"
unicode-width = "0.1.13"
fakeit = "1.2.0"
